--- a/VeryNice.ipynb
+++ b/VeryNice.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "very nice\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print('very nice')"
+    "print('test update')"
    ]
   }
  ],
@@ -34,9 +26,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
