--- a/VeryNice.ipynb
+++ b/VeryNice.ipynb
@@ -16,6 +16,23 @@
    "source": [
     "print('very nice')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VeryNic3 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python VeryNice2.py"
+   ]
   }
  ],
  "metadata": {
