added two more people in the code

--- a/VeryNice.ipynb
+++ b/VeryNice.ipynb
@@ -14,7 +14,17 @@
     }
    ],
    "source": [
-    "print('very nice')"
+    "for(i in range(10)):\n",
+    "    print('very nice')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "very nice x10"
    ]
   }
  ],
